--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderGear.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderGear.cshtml
@@ -240,7 +240,7 @@
 
                     </div>
                     <!-- Cột bên phải: Danh sách sản phẩm -->
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-auto  ml-auto">
                         <div id="gearList" class="row">
                             @if (campingGears != null && campingGears.Any())
                             {
