--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateTicket.cshtml
@@ -107,7 +107,7 @@
             <div class="col-md-12">
                 <div class="tile">
                     <div class="tile-body">
-                        <form asp-controller="OrderManagement" asp-action="TicketCart" method="get">
+                        <form asp-controller="OrderManagement" asp-action="UpdateTicket" method="post">
                         <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                                id="sampleTable">
                             <thead>
@@ -148,9 +148,8 @@
                         </table>
                             <div class="d-flex ">
                                 <a href="~/OrderManagement/CreateOrder" class="btn btn-secondary">Quay lại</a>
-                                <a href="~/OrderManagement/OrderGear" class="btn btn-primary">Đặt đồ cắm trại</a>
 
-
+                                <button type="submit" class="btn btn-primary">Lưu</button>
                             </div>
 
                         </form>
